--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 
 # testing
 /coverage
+/chain/.env*
+/chain/node_modules*
+/chain/typechain-types*
+/chain/artifacts*
+/chain/cache*
 
 # next.js
 /.next/
