--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@rainbow-me/rainbowkit": "^1.0.5",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
