--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "ethers": "^6.6.2",
+    "moment": "^2.29.4",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
